grid jumping on game done fixed

--- a/src/components/grid/grid.module.scss
+++ b/src/components/grid/grid.module.scss
@@ -8,6 +8,7 @@
   gap: 1.5em;
   background-color: var(--color-background-secondary);
   border-radius: 9px;
+  border: 3px solid transparent;
   &Border {
    composes: grid;
    border: 3px solid var(--color-secondary);
